# ComfyUI-GGUF-FX

./: .gitignore  GPU_LAYERS_GUIDE.md  HOW_TO_FIND_NODES.md  LICENSE  NEXA_EXAMPLE.md  NEXA_SDK_GUIDE.md  NEXA_SDK_INTEGRATION.md  NEXA_UPDATE_V2.md  OLLAMA_SETUP_README.md  README.md  UNIFIED_API_GUIDE.md  __init__.py  __init__.py.bak  check_all_nodes.py  commit.bat  custom_model_manager.py  custom_models.yaml  model_registry.py  model_registry.yaml  pyproject.toml  requirements.txt  setup_llama_cpp_cuda.sh  setup_ollama_gguf.sh  verify_nodes.py
config/: __init__.py  node_definitions.py  paths.py
core/: __init__.py  cache_manager.py  inference_engine.py  model_loader.py  model_loader.py.backup
core/inference/: __init__.py  nexa_engine.py  transformers_engine.py  unified_api_engine.py
docs/: QUICK_REFERENCE.md  VASTAI_GPU_SETUP_GUIDE.md
models/: __init__.py  text_models.py  vision_models.py
nodes/: __init__.py  multi_image_node.py  nexa_text_node.py  system_prompt_node.py  text_generation_nodes.py  text_node.py  unified_text_node.py  unified_text_node.py.deprecated  vision_node.py  vision_node.py.backup  vision_node_transformers.py
tests/: test_ollama_nexa_comparison.py  test_unified_text_node.py
utils/: __init__.py  device_optimizer.py  downloader.py  mmproj_finder.py  mmproj_validator.py  registry.py  system_prompts.py  validator.py
